--- a/ecom-application/src/main/resources/application.yml
+++ b/ecom-application/src/main/resources/application.yml
@@ -1,19 +1,20 @@
 spring:
   application:
     name: ecom-application
-  h2:
-    console:
-      enabled: true
   datasource:
-    url: jdbc:h2:mem:test
+    url: jdbc:postgresql://localhost:5432/microservice-ecom
+    username: postgres
+    password: 123
   jpa:
     show-sql: true
     hibernate:
       ddl-auto: create
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
-server:
-  port: 8082
-  shutdown: graceful
+#server:
+#  port: 8080
+#  shutdown: graceful
 
 management:
   endpoints:
