--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -1,26 +1,5 @@
 spring:
   application:
     name: product-service
-  datasource:
-    url: jdbc:postgresql://localhost:5432/productdb
-    username: postgres
-    password: 123
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-
-#  h2:
-#    console:
-#      enabled: true
-#  datasource:
-#    url: jdbc:h2:mem:test
-#  jpa:
-#    show-sql: true
-#    hibernate:
-#      ddl-auto: create
-
-server:
-  port: 8081
+  config:
+    import: optional:configserver:http://localhost:8888
