--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -1,29 +1,5 @@
 spring:
   application:
     name: user-service
-  mongodb:
-    uri: mongodb://localhost:27017/userdb
-    database: userdb
-#  datasource:
-#    url: jdbc:postgresql://localhost:5432/userdb
-#    username: postgres
-#    password: 123
-#  jpa:
-#    show-sql: true
-#    hibernate:
-#      ddl-auto: update
-#    database: postgresql
-#    database-platform: org.hibernate.dialect.PostgreSQLDialect
-
-#  h2:
-#    console:
-#      enabled: true
-#  datasource:
-#    url: jdbc:h2:mem:test
-#  jpa:
-#    show-sql: true
-#    hibernate:
-#      ddl-auto: create
-
-server:
-  port: 8082
+  config:
+    import: optional:configserver:http://localhost:8888
