--- a/configserver/src/main/resources/config/product-service.yml
+++ b/configserver/src/main/resources/config/product-service.yml
@@ -3,6 +3,11 @@ spring:
     url: jdbc:postgresql://localhost:5432/productdb
     username: ${DB_USER}
     password: ${DB_PASSWORD}
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
   jpa:
     show-sql: true
     hibernate:
@@ -12,3 +17,12 @@ spring:
 
 server:
   port: 8081
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
+app:
+  message: "Hello Product"
