--- a/configserver/src/main/resources/config/user-service.yml
+++ b/configserver/src/main/resources/config/user-service.yml
@@ -2,6 +2,16 @@ spring:
   mongodb:
     uri: ${MONGO_URI}
     database: userdb
-
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 server:
   port: 8082
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
