--- a/Inter-Service-Communication/consumer/src/main/resources/application.yaml
+++ b/Inter-Service-Communication/consumer/src/main/resources/application.yaml
@@ -3,3 +3,9 @@ spring:
     name: consumer
 server:
   port: 8800
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
