--- a/configserver/src/main/resources/config/order-service.yml
+++ b/configserver/src/main/resources/config/order-service.yml
@@ -31,6 +31,10 @@ app:
   message: "Hello Order"
 
 eureka:
+  instance:
+    hostname: localhost
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${server.port}
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
