--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -10,15 +10,15 @@ spring:
         webflux:
           routes:
             - id: product-service
-              uri: http://localhost:8081
+              uri: lb://PRODUCT-SERVICE
               predicates:
                 - Path=/api/products/**
             - id: order-service
-              uri: http://localhost:8083
+              uri: lb://ORDER-SERVICE
               predicates:
                 - Path=/api/orders/**,/api/cart/**
             - id: user-service
-              uri: http://localhost:8082
+              uri: lb://USER-SERVICE
               predicates:
                 - Path=/api/users/**
 
@@ -33,3 +33,8 @@ management:
   tracing:
     sampling:
       probability: 1.0
+eureka:
+  instance:
+    hostname: localhost
+    prefer-ip-address: true
+    instance-id: ${spring.application.name}:${server.port}
