--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,50 +1,5 @@
-server:
-  port: 8080
-
 spring:
   application:
-    name: gateway
-  cloud:
-    gateway:
-      server:
-        webflux:
-          routes:
-            - id: product-service
-              uri: lb://PRODUCT-SERVICE
-              predicates:
-                - Path=/api/products/**
-            - id: order-service
-              uri: lb://ORDER-SERVICE
-              predicates:
-                - Path=/api/orders/**,/api/cart/**
-            - id: user-service
-              uri: lb://USER-SERVICE
-              predicates:
-                - Path=/api/users/**
-            - id: eureka-server
-              uri: http://localhost:8761
-              predicates:
-                - Path=/eureka/main
-              filters:
-                - SetPath=/
-            - id: eureka-server-static
-              uri: http://localhost:8761
-              predicates:
-                - Path=/eureka/**
-
-management:
-  endpoint:
-    gateway:
-      enabled: true
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-  tracing:
-    sampling:
-      probability: 1.0
-eureka:
-  instance:
-    hostname: localhost
-    prefer-ip-address: true
-    instance-id: ${spring.application.name}:${server.port}
+    name: gateway-service
+  config:
+    import: optional:configserver:http://localhost:8888
