--- a/configserver/src/main/resources/config/gateway-service.yml
+++ b/configserver/src/main/resources/config/gateway-service.yml
@@ -71,3 +71,8 @@ resilience4j:
         failure-rate-threshold: 50
         automatic-transition-from-open-to-half-open-enabled: true
         sliding-window-type: count_based
+  retry:
+    instances:
+      retryBreaker:
+        maxAttempts: 5
+        waitDuration: 500ms
