--- a/configserver/src/main/resources/config/order-service.yml
+++ b/configserver/src/main/resources/config/order-service.yml
@@ -68,3 +68,9 @@ resilience4j:
         failure-rate-threshold: 50
         automatic-transition-from-open-to-half-open-enabled: true
         sliding-window-type: count_based
+  ratelimiter:
+    instances:
+      rateBreaker:
+        timeout-duration: 0
+        limit-refresh-period: 4s
+        limit-for-period: 2
