--- a/user/.env
+++ b/user/.env
@@ -1,1 +1,6 @@
 MONGO_URI=mongodb://localhost:27017/userdb
+RABBITMQ_HOST=armadillo.rmq.cloudamqp.com
+RABBITMQ_PORT=5672
+RABBITMQ_USERNAME=nvxnzzff
+RABBITMQ_PASSWORD=97fl8fwLV1lcxKOj8G9pH80OulptLYD1
+RABBITMQ_VHOST=nvxnzzff
