--- a/product/.env
+++ b/product/.env
@@ -1,2 +1,7 @@
 DB_USER=postgres
 DB_PASSWORD=123
+RABBITMQ_HOST=armadillo.rmq.cloudamqp.com
+RABBITMQ_PORT=5672
+RABBITMQ_USERNAME=nvxnzzff
+RABBITMQ_PASSWORD=97fl8fwLV1lcxKOj8G9pH80OulptLYD1
+RABBITMQ_VHOST=nvxnzzff
