--- a/configserver/src/main/resources/config/order-service.yml
+++ b/configserver/src/main/resources/config/order-service.yml
@@ -5,22 +5,25 @@ spring:
         createOrder-out-0:
           destination: order.exchange
           content-type: application/json
-      rabbit:
-        bindings:
-          createOrder-out-0:
-            producer:
-              routing-key-expression: '''order.tracking'''
+      kafka:
+        binder:
+          borkers: localhost:9092
+#      rabbit:
+#        bindings:
+#          createOrder-out-0:
+#            producer:
+#              routing-key-expression: '''order.tracking'''
   datasource:
     url: jdbc:postgresql://localhost:5432/orderdb
     username: ${DB_USER}
     password: ${DB_PASSWORD}
-  rabbitmq:
-    host: ${RABBITMQ_HOST:localhost}
-    port: ${RABBITMQ_PORT:5672}
-    username: ${RABBITMQ_USERNAME:guest}
-    password: ${RABBITMQ_PASSWORD:guest}
-    virtual-host: ${RABBITMQ_VHOST:guest}
-    connection-timeout: 30000
+#  rabbitmq:
+#    host: ${RABBITMQ_HOST:localhost}
+#    port: ${RABBITMQ_PORT:5672}
+#    username: ${RABBITMQ_USERNAME:guest}
+#    password: ${RABBITMQ_PASSWORD:guest}
+#    virtual-host: ${RABBITMQ_VHOST:guest}
+#    connection-timeout: 30000
   jpa:
     show-sql: true
     hibernate:
@@ -31,13 +34,13 @@ spring:
 server:
   port: 8083
 
-rabbitmq:
-  exchange:
-    name: order.exchange
-  queue:
-    name: order.queue
-  routing:
-    key: order.tracking
+#rabbitmq:
+#  exchange:
+#    name: order.exchange
+#  queue:
+#    name: order.queue
+#  routing:
+#    key: order.tracking
 
 management:
   endpoints:
