--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,22 +37,100 @@ services:
         limits:
           memory: 1g
 
-#  rabbitmq:
-#    container_name: rabbitmq_container
-#    image: rabbitmq:3-management
-#    environment:
-#      - RABBITMQ_DEFAULT_USER=guest
-#      - RABBITMQ_DEFAULT_PASS=guest
+  keycloak:
+    container_name: keycloak
+    image: quay.io/keycloak/keycloak:26.2.5
+    mem_limit: 700m
+    ports:
+      - "8443:8080"
+    environment:
+      KC_BOOTSTRAP_ADMIN_USERNAME: admin
+      KC_BOOTSTRAP_ADMIN_PASSWORD: admin
+    #      PROXY_ADDRESS_FORWARDING: "true"
+    #      KEYCLOAK_FRONTEND_URL: "http://localhost:8443"
+    command: [ "start-dev" ]
+    networks:
+      - backend
+
+  mongo:
+    image: mongodb/mongodb-community-server:latest
+    container_name: mongo
+    mem_limit: 700m
+    volumes:
+      - mongo_data:/data/db
+    ports:
+      - "27017:27017"
+    networks:
+      - backend
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.5.0
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    networks:
+      - backend
+
+#  kafka:
+#    image: confluentinc/cp-kafka:7.5.0
+#    container_name: kafka
 #    ports:
-#      - "5672:5672"
-#      - "15672:15672"
+#      - "9092:9092"
+#    environment:
+#      KAFKA_BROKER_ID: 1
+#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+#      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+#    depends_on:
+#      - zookeeper
 #    networks:
 #      - backend
-#    restart: unless-stopped
-#    deploy:
-#      resources:
-#        limits:
-#          memory: 512m
+
+  kafka:
+    image: confluentinc/cp-kafka:7.5.0
+    container_name: kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    depends_on:
+      - zookeeper
+    networks:
+      - backend
+
+  rabbitmq:
+    container_name: rabbitmq_container
+    image: rabbitmq:3-management
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - backend
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          memory: 512m
+
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: zipkin
+    ports:
+      - 9411:9411
+    networks:
+      - backend
 
 networks:
   backend:
@@ -61,3 +139,4 @@ networks:
 volumes:
   postgres:
   pgadmin:
+  mongo_data:
